Remove string template from chapter 02